@@ -13,6 +13,8 @@ Version 1.13.10+dev:
      CPU usage in fullscreen windows such as MP lobby by about 85 %.
  * Miscellaneous and bug fixes:
    * Fixed ingame help showing units you haven't encountered (bug #2135)
+   * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
+     (bug #2196)
 
 
 Version 1.13.10:
