@@ -38,6 +38,8 @@ Version 1.13.10+dev:
    * Fixed ingame help showing units you haven't encountered (bug #2135)
    * Fixed the opacity IPF resetting to 0 if the value given was 100% or
      greater (bug #2185).
+   * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
+     (bug #2196)
 
 Version 1.13.10:
  * Add-ons client:
